@@ -1,49 +1,42 @@
 package com.chalkboardmods.floral_flair.core.data.server;
 
 import com.chalkboardmods.floral_flair.core.registry.FloralBlocks;
-import com.google.common.collect.ImmutableList;
-import com.mojang.datafixers.util.Pair;
-import net.minecraft.data.DataGenerator;
-import net.minecraft.data.loot.BlockLoot;
+import net.minecraft.data.PackOutput;
+import net.minecraft.data.loot.BlockLootSubProvider;
 import net.minecraft.data.loot.LootTableProvider;
 import net.minecraft.resources.ResourceLocation;
+import net.minecraft.world.flag.FeatureFlagSet;
+import net.minecraft.world.flag.FeatureFlags;
 import net.minecraft.world.level.block.Block;
 import net.minecraft.world.level.block.DoublePlantBlock;
 import net.minecraft.world.level.block.state.properties.BlockStateProperties;
 import net.minecraft.world.level.block.state.properties.DoubleBlockHalf;
 import net.minecraft.world.level.storage.loot.LootTable;
 import net.minecraft.world.level.storage.loot.ValidationContext;
-import net.minecraft.world.level.storage.loot.parameters.LootContextParamSet;
 import net.minecraft.world.level.storage.loot.parameters.LootContextParamSets;
 import net.minecraftforge.registries.RegistryObject;
 import org.jetbrains.annotations.NotNull;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
-import java.util.function.BiConsumer;
-import java.util.function.Consumer;
-import java.util.function.Supplier;
+import java.util.Set;
 
 public class FloralLootTableProvider extends LootTableProvider {
-    public FloralLootTableProvider(DataGenerator generator) {
-        super(generator);
-    }
-
-    private final List<Pair<Supplier<Consumer<BiConsumer<ResourceLocation, LootTable.Builder>>>, LootContextParamSet>> lootTables = ImmutableList.of(Pair.of(FloralBlockLoot::new, LootContextParamSets.BLOCK));
-
-    @Override
-    protected @NotNull List<Pair<Supplier<Consumer<BiConsumer<ResourceLocation, LootTable.Builder>>>, LootContextParamSet>> getTables() {
-        return this.lootTables;
+    public FloralLootTableProvider(PackOutput pOutput) {
+        super(pOutput, Collections.emptySet(), List.of(new SubProviderEntry(FloralBlockLootSubProvider::new, LootContextParamSets.EMPTY)));
     }
 
     @Override
-    protected void validate(@NotNull Map<ResourceLocation, LootTable> map, @NotNull ValidationContext validationtracker) {
-    }
+    protected void validate(@NotNull Map<ResourceLocation, LootTable> map, @NotNull ValidationContext validationcontext) {}
 
-    public static class FloralBlockLoot extends BlockLoot {
+    public static class FloralBlockLootSubProvider extends BlockLootSubProvider {
+        public FloralBlockLootSubProvider() {
+            super(Collections.emptySet(), FeatureFlags.REGISTRY.allFlags());
+        }
 
         @Override
-        protected void addTables() {
+        protected void generate() {
             this.dropSelf(FloralBlocks.FOXNIP.get());
             this.dropSelf(FloralBlocks.FROSTED_FOXNIP.get());
             this.dropSelf(FloralBlocks.PULSE_PETAL.get());
